--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,7 +82,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
-                    Theme by <a href="http://wxyweb.info">Xiaoyang Weix</a> |
+                    Theme by <a href="http://wxyweb.info">Xiaoyang Wei</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="91px" height="20px"
